bk_ida/gccida/c2/bitmap_equal_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_equal_p/src/bitmap.c:1140:12: error: expected expression
*( _OWORD *)&v7.first = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_equal_p/src/bitmap.c:1140:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v7.first = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/bitmap_equal_p/src/obj/bitmap.o] Error 1
